# Build-Multi-Input-Stream-Crypto-App

./: .gitignore  Makefile  To_do.md  pyproject.toml
deployments/dev/kind/: create_cluster.sh  install_kafka.sh
docker/: trades.Dockerfile
services/candles/src/candles/: main.py
services/trades/: pyproject.toml
services/trades/src/trades/: config.py  kraken_api.py  main.py
